# pageindex-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  testPageIndex.ipynb
src/: lib.rs  parser.rs  traversal.rs  tree.rs
tests/: bench_small.md  financial_concepts.md  pageindex_rs_benchmark.ipynb
