[package]
name = "pageindex-rs"
version = "0.1.2"
edition = "2021"
description = "Hierarchical document indexing and traversal for RAG pipelines"
license = "MIT"
readme = "README.md"

[lib]
name = "pageindex_rs"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.21", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
