[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pageindex-rs"
version = "0.1.0"
description = "Hierarchical document indexing and traversal for RAG pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["rag", "llm", "document", "indexing", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
features = ["extension-module"]
